fix: 选择类字段编码改为按formCode配置，消除硬编码猜测
根因：
- resolveDependencyFields() 返回 shzlnl1-4 是猜测的字段名，不是真实选项编码
- MORSE_METHOD_VALUE='Mordepingfenfa' 硬编码未经验证
- lcpdf/mpff 分开写入不符合实际表单结构

修改：
- FirstAdmissionAssessmentSyncProperties: 新增 FormOptionConfig 嵌套配置类
  支持按 formCode 配置 dependencyField/dependencyOptions/fallMethodField/fallMethodOptions
- FirstAssessmentSourceSelector: 删除 resolveDependencyFields()
  新增 resolveDependencyOptionValue() 和 resolveFallMethodOptionValue()
  跌倒评估方法合并到同一字段(List)写入
- FirstAdmissionAssessmentSyncService: TARGET_FIELDS 改为动态计算
  BASE_TARGET_FIELDS + 配置字段，启动时校验配置完整性
- application.yml: 新增 form-option-configs 配置段

测试：81 tests passed
  新增: resolveDependency/resolveFallMethod 选项解析测试
  新增: 不同formCode不同编码测试
  新增: 未配置时不猜测不写入测试
  新增: 中英文括号兼容测试